--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -36,13 +38,15 @@
     ]
   },
   "devDependencies": {
-	"@svgr/webpack": "^6.2.1",
+    "@svgr/webpack": "^6.2.1",
+    "gh-pages": "^6.2.0",
     "postcss": "^8.4.47",
     "resolve-url-loader": "^5.0.0"
   },
   "overrides": {
-	"@svgr/webpack": "$@svgr/webpack",
+    "@svgr/webpack": "$@svgr/webpack",
     "resolve-url-loader": "$resolve-url-loader",
     "postcss": "$postcss"
-  }
+  },
+  "homepage": "https://cjb412.github.io/nutritionapp-ui/"
 }
